--- a/bookmarks.html
+++ b/bookmarks.html
@@ -13,7 +13,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 
 <script>
-
+var q;
 var b = {}
 
 var TYPE_FOLDER = "text/x-moz-place-container";
