--- a/bookmarks.html
+++ b/bookmarks.html
@@ -35,10 +35,8 @@
 	Press "Import and backup... > Backup" and then save the bookmarks_{date}.json file<br/>
 	Drag that file on here and let go
 </div>
-<input type="button" value="go" onclick="run();"></input><br/>
 <div>Original bookmarks had <span id="originalLinkCount">?</span> links</div>
 <div>New bookmarks have <span id="newLinkCount">?</span> links</div>
-<textarea id="result" rows="20" cols="80" value=""></textarea>
 <div id="Canvas" class="Canvas"></div> 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
@@ -213,8 +211,10 @@ var run2 = function(inputJson) {
 	$("#originalLinkCount").text(reader.originalLinkCount()); 
 	$("#newLinkCount").text(reader.newLinkCount()); 
 	var outputJson = JSON.stringify(output);
-	$("#result").val(outputJson);
-	Process(outputJson);
+	//$("#result").val(outputJson);
+	
+	var formatter = new JsonFormatter();
+	formatter.Process(outputJson);
 } 
 
 var dragdrop = {
@@ -278,229 +278,245 @@ https://quickjsonformatter.codeplex.com/
  
 // we need tabs as spaces and not CSS magin-left 
 // in order to ratain format when coping and pasing the code
-var config = {
-	canvas: "Canvas",
-	tabSize: 2,
-	isCollapsible: true,
-	SINGLE_TAB: "  ",
-	ImgCollapsed: "images/Collapsed.gif",
-	ImgExpanded: "images/Expanded.gif",
-	QuoteKeys: true,
-	_dateObj: new Date(),
-	_regexpObj: new RegExp(),
-		
+
+var JsonFormatter = function () {
+	var _this = this;
+	
+	var config = {
+		canvas: "Canvas",
+		tabSize: 2,
+		isCollapsible: true,
+		SINGLE_TAB: "  ",
+		ImgCollapsed: "images/Collapsed.gif",
+		ImgExpanded: "images/Expanded.gif",
+		QuoteKeys: true,
+		_dateObj: new Date(),
+		_regexpObj: new RegExp(),
+	};
+	
+	function $id(id) {
+		return document.getElementById(id); 
+	}
+	
+	function IsArray(obj) {
+		return obj && 
+			typeof obj === 'object' && 
+			typeof obj.length === 'number' &&
+			!(obj.propertyIsEnumerable('length'));
+	}
+	
+	_this.Process = function (json) {
+		SetTab();
+		var html = "";
+		try {
+			if (json == "") json = "\"\"";
+			var obj = eval("["+json+"]");
+			html = ProcessObject(obj[0], 0, false, false, false);
+			$id(config.canvas).innerHTML = "<PRE class='CodeContainer'>"+html+"</PRE>";
+		}catch(e){
+			alert("JSON is not well formated:\n"+e.message);
+			$id(config.canvas).innerHTML = "";
+		}
+	}
+	
+	function ProcessObject(obj, indent, addComma, isArray, isPropertyContent){
+		var html = "";
+		var comma = addComma ? "<span class='Comma'>,</span> " : ""; 
+		var type = typeof obj;
+		var clpsHtml ="";
+		if (IsArray(obj)) {
+			if(obj.length == 0){
+				html += GetRow(indent, "<span class='ArrayBrace'>[ ]</span>"+comma, isPropertyContent);
+			}else{
+				clpsHtml = config.isCollapsible ? "<span><img src=\""+config.ImgExpanded+"\" onClick=\"ExpImgClicked(this)\" /></span><span class='collapsible'>" : "";
+				html += GetRow(indent, "<span class='ArrayBrace'>[</span>"+clpsHtml, isPropertyContent);
+				for(var i = 0; i < obj.length; i++){
+					html += ProcessObject(obj[i], indent + 1, i < (obj.length - 1), true, false);
+				}
+				clpsHtml = config.isCollapsible ? "</span>" : "";
+				html += GetRow(indent, clpsHtml+"<span class='ArrayBrace'>]</span>"+comma);
+			}
+		}else if(type == 'object'){
+			if (obj == null){
+				html += FormatLiteral("null", "", comma, indent, isArray, "Null");
+			}else if (obj.constructor == config._dateObj.constructor) { 
+				html += FormatLiteral("new Date(" + obj.getTime() + ") /*" + obj.toLocaleString()+"*/", "", comma, indent, isArray, "Date"); 
+			}else if (obj.constructor == config._regexpObj.constructor) {
+				html += FormatLiteral("new RegExp(" + obj + ")", "", comma, indent, isArray, "RegExp"); 
+			}else{
+				var numProps = 0;
+				for(var prop in obj) numProps++;
+				if(numProps == 0){
+					html += GetRow(indent, "<span class='ObjectBrace'>{ }</span>"+comma, isPropertyContent);
+				}else{
+					clpsHtml = config.isCollapsible ? "<span><img src=\""+config.ImgExpanded+"\" onClick=\"ExpImgClicked(this)\" /></span><span class='collapsible'>" : "";
+					html += GetRow(indent, "<span class='ObjectBrace'>{</span>"+clpsHtml, isPropertyContent);
+					var j = 0;
+					for(var prop in obj){
+						var quote = config.QuoteKeys ? "\"" : "";
+						html += GetRow(indent + 1, "<span class='PropertyName'>"+quote+prop+quote+"</span>: "+ProcessObject(obj[prop], indent + 1, ++j < numProps, false, true));
+					}
+					clpsHtml = config.isCollapsible ? "</span>" : "";
+					html += GetRow(indent, clpsHtml+"<span class='ObjectBrace'>}</span>"+comma);
+				}
+			}
+		}else if(type == 'number'){
+			html += FormatLiteral(obj, "", comma, indent, isArray, "Number");
+		}else if(type == 'boolean'){
+			html += FormatLiteral(obj, "", comma, indent, isArray, "Boolean");
+		}else if(type == 'function'){
+			if (obj.constructor == config._regexpObj.constructor) {
+				html += FormatLiteral("new RegExp(" + obj + ")", "", comma, indent, isArray, "RegExp"); 
+			}else{
+				obj = FormatFunction(indent, obj);
+				html += FormatLiteral(obj, "", comma, indent, isArray, "Function");
+			}
+		}else if(type == 'undefined'){
+			html += FormatLiteral("undefined", "", comma, indent, isArray, "Null");
+		}else{
+			html += FormatLiteral(obj.toString().split("\\").join("\\\\").split('"').join('\\"'), "\"", comma, indent, isArray, "String");
+		}
+		return html;
+	}
+	
+	function FormatLiteral(literal, quote, comma, indent, isArray, style){
+		if(typeof literal == 'string')
+			literal = literal.split("<").join("&lt;").split(">").join("&gt;");
+		var str = "<span class='"+style+"'>"+quote+literal+quote+comma+"</span>";
+		if(isArray) str = GetRow(indent, str);
+		return str;
+	}
+
+	function FormatFunction(indent, obj){
+		var tabs = "";
+		for(var i = 0; i < indent; i++) tabs += config.TAB;
+		var funcStrArray = obj.toString().split("\n");
+		var str = "";
+		for(var i = 0; i < funcStrArray.length; i++){
+			str += ((i==0)?"":tabs) + funcStrArray[i] + "\n";
+		}
+		return str;
+	}
+
+	function GetRow(indent, data, isPropertyContent){
+		var tabs = "";
+		for(var i = 0; i < indent && !isPropertyContent; i++) tabs += config.TAB;
+		if(data != null && data.length > 0 && data.charAt(data.length-1) != "\n")
+			data = data+"\n";
+		return tabs+data;                       
+	}	
+	
+	function CollapseAllClicked(){
+		EnsureIsPopulated();
+		TraverseChildren($id(config.canvas), function(element){
+			if(element.className == 'collapsible'){
+			MakeContentVisible(element, false);
+			}
+		}, 0);
+	}
+
+	function ExpandAllClicked(){
+		EnsureIsPopulated();
+		TraverseChildren($id(config.canvas), function(element){
+			if(element.className == 'collapsible'){
+			MakeContentVisible(element, true);
+			}
+		}, 0);
+	}
+
+	function MakeContentVisible(element, visible){
+		var img = element.previousSibling.firstChild;
+		if(!!img.tagName && img.tagName.toLowerCase() == "img"){
+			element.style.display = visible ? 'inline' : 'none';
+			element.previousSibling.firstChild.src = visible ? config.ImgExpanded : config.ImgCollapsed;
+		}
+	}
+
+	function TraverseChildren(element, func, depth){
+		for(var i = 0; i < element.childNodes.length; i++){
+			TraverseChildren(element.childNodes[i], func, depth + 1);
+		}
+		func(element, depth);
+	}
+
+	function ExpImgClicked(img){
+		var container = img.parentNode.nextSibling;
+		if(!container) return;
+		var disp = "none";
+		var src = config.ImgCollapsed;
+		if(container.style.display == "none"){
+			disp = "inline";
+			src = config.ImgExpanded;
+		}
+		container.style.display = disp;
+		img.src = src;
+	}
+
+	// function CollapseLevel(level){
+	//   EnsureIsPopulated();
+	//   TraverseChildren($id(config.canvas), function(element, depth){
+	//     if(element.className == 'collapsible'){
+	//       if(depth >= level){
+	//         MakeContentVisible(element, false);
+	//       }else{
+	//         MakeContentVisible(element, true);  
+	//       }
+	//     }
+	//   }, 0);
+	// }
+	// function TabSizeChanged(){
+	//   Process();
+	// }
+	function SetTab(){
+		config.TAB = MultiplyString(config.tabSize, config.SINGLE_TAB);
+	}
+
+	function EnsureIsPopulated(){
+		if(!$id(config.canvas).innerHTML && !!$id("RawJson").value) Process();
+	}
+
+	function MultiplyString(num, str){
+		var sb =[];
+		for(var i = 0; i < num; i++){
+			sb.push(str);
+		}
+		return sb.join("");
+	}
+
+	// function SelectAllClicked(){
+	//  
+	//   if(!!document.selection && !!document.selection.empty) {
+	//     document.selection.empty();
+	//   } else if(window.getSelection) {
+	//     var sel = window.getSelection();
+	//     if(sel.removeAllRanges) {
+	//       window.getSelection().removeAllRanges();
+	//     }
+	//   }
+	//  
+	//   var range = 
+	//       (!!document.body && !!document.body.createTextRange)
+	//           ? document.body.createTextRange()
+	//           : document.createRange();
+	//   
+	//   if(!!range.selectNode)
+	//     range.selectNode($id(config.canvas));
+	//   else if(range.moveToElementText)
+	//     range.moveToElementText($id(config.canvas));
+	//   
+	//   if(!!range.select)
+	//     range.select($id(config.canvas));
+	//   else
+	//     window.getSelection().addRange(range);
+	// }
+	// function LinkToJson(){
+	//   var val = $id("RawJson").value;
+	//   val = escape(val.split('/n').join(' ').split('/r').join(' '));
+	//   $id("InvisibleLinkUrl").value = val;
+	//   $id("InvisibleLink").submit();
+	// }
 };
 
-// window.SINGLE_TAB = "  ";
-// config.ImgCollapsed = "images/Collapsed.gif";
-// config.ImgExpanded = "images/Expanded.gif";
-// window.QuoteKeys = true;
-function $id(id){ return document.getElementById(id); }
-function IsArray(obj) {
-  return obj && 
-          typeof obj === 'object' && 
-          typeof obj.length === 'number' &&
-          !(obj.propertyIsEnumerable('length'));
-}
-function Process(json){
-  SetTab();
-  var html = "";
-  try {
-    if (json == "") json = "\"\"";
-    var obj = eval("["+json+"]");
-    html = ProcessObject(obj[0], 0, false, false, false);
-    $id(config.canvas).innerHTML = "<PRE class='CodeContainer'>"+html+"</PRE>";
-  }catch(e){
-    alert("JSON is not well formated:\n"+e.message);
-    $id(config.canvas).innerHTML = "";
-  }
-}
-function ProcessObject(obj, indent, addComma, isArray, isPropertyContent){
-  var html = "";
-  var comma = (addComma) ? "<span class='Comma'>,</span> " : ""; 
-  var type = typeof obj;
-  var clpsHtml ="";
-  if(IsArray(obj)){
-    if(obj.length == 0){
-      html += GetRow(indent, "<span class='ArrayBrace'>[ ]</span>"+comma, isPropertyContent);
-    }else{
-      clpsHtml = config.isCollapsible ? "<span><img src=\""+config.ImgExpanded+"\" onClick=\"ExpImgClicked(this)\" /></span><span class='collapsible'>" : "";
-      html += GetRow(indent, "<span class='ArrayBrace'>[</span>"+clpsHtml, isPropertyContent);
-      for(var i = 0; i < obj.length; i++){
-        html += ProcessObject(obj[i], indent + 1, i < (obj.length - 1), true, false);
-      }
-      clpsHtml = config.isCollapsible ? "</span>" : "";
-      html += GetRow(indent, clpsHtml+"<span class='ArrayBrace'>]</span>"+comma);
-    }
-  }else if(type == 'object'){
-    if (obj == null){
-        html += FormatLiteral("null", "", comma, indent, isArray, "Null");
-    }else if (obj.constructor == config._dateObj.constructor) { 
-        html += FormatLiteral("new Date(" + obj.getTime() + ") /*" + obj.toLocaleString()+"*/", "", comma, indent, isArray, "Date"); 
-    }else if (obj.constructor == config._regexpObj.constructor) {
-        html += FormatLiteral("new RegExp(" + obj + ")", "", comma, indent, isArray, "RegExp"); 
-    }else{
-      var numProps = 0;
-      for(var prop in obj) numProps++;
-      if(numProps == 0){
-        html += GetRow(indent, "<span class='ObjectBrace'>{ }</span>"+comma, isPropertyContent);
-      }else{
-        clpsHtml = config.isCollapsible ? "<span><img src=\""+config.ImgExpanded+"\" onClick=\"ExpImgClicked(this)\" /></span><span class='collapsible'>" : "";
-        html += GetRow(indent, "<span class='ObjectBrace'>{</span>"+clpsHtml, isPropertyContent);
-        var j = 0;
-        for(var prop in obj){
-          var quote = config.QuoteKeys ? "\"" : "";
-          html += GetRow(indent + 1, "<span class='PropertyName'>"+quote+prop+quote+"</span>: "+ProcessObject(obj[prop], indent + 1, ++j < numProps, false, true));
-        }
-        clpsHtml = config.isCollapsible ? "</span>" : "";
-        html += GetRow(indent, clpsHtml+"<span class='ObjectBrace'>}</span>"+comma);
-      }
-    }
-  }else if(type == 'number'){
-    html += FormatLiteral(obj, "", comma, indent, isArray, "Number");
-  }else if(type == 'boolean'){
-    html += FormatLiteral(obj, "", comma, indent, isArray, "Boolean");
-  }else if(type == 'function'){
-    if (obj.constructor == config._regexpObj.constructor) {
-        html += FormatLiteral("new RegExp(" + obj + ")", "", comma, indent, isArray, "RegExp"); 
-    }else{
-        obj = FormatFunction(indent, obj);
-        html += FormatLiteral(obj, "", comma, indent, isArray, "Function");
-    }
-  }else if(type == 'undefined'){
-    html += FormatLiteral("undefined", "", comma, indent, isArray, "Null");
-  }else{
-    html += FormatLiteral(obj.toString().split("\\").join("\\\\").split('"').join('\\"'), "\"", comma, indent, isArray, "String");
-  }
-  return html;
-}
-function FormatLiteral(literal, quote, comma, indent, isArray, style){
-  if(typeof literal == 'string')
-    literal = literal.split("<").join("&lt;").split(">").join("&gt;");
-  var str = "<span class='"+style+"'>"+quote+literal+quote+comma+"</span>";
-  if(isArray) str = GetRow(indent, str);
-  return str;
-}
-function FormatFunction(indent, obj){
-  var tabs = "";
-  for(var i = 0; i < indent; i++) tabs += config.TAB;
-  var funcStrArray = obj.toString().split("\n");
-  var str = "";
-  for(var i = 0; i < funcStrArray.length; i++){
-    str += ((i==0)?"":tabs) + funcStrArray[i] + "\n";
-  }
-  return str;
-}
-function GetRow(indent, data, isPropertyContent){
-  var tabs = "";
-  for(var i = 0; i < indent && !isPropertyContent; i++) tabs += config.TAB;
-  if(data != null && data.length > 0 && data.charAt(data.length-1) != "\n")
-    data = data+"\n";
-  return tabs+data;                       
-}
-
- 
-function CollapseAllClicked(){
-  EnsureIsPopulated();
-  TraverseChildren($id(config.canvas), function(element){
-    if(element.className == 'collapsible'){
-      MakeContentVisible(element, false);
-    }
-  }, 0);
-}
-function ExpandAllClicked(){
-  EnsureIsPopulated();
-  TraverseChildren($id(config.canvas), function(element){
-    if(element.className == 'collapsible'){
-      MakeContentVisible(element, true);
-    }
-  }, 0);
-}
-function MakeContentVisible(element, visible){
-  var img = element.previousSibling.firstChild;
-  if(!!img.tagName && img.tagName.toLowerCase() == "img"){
-    element.style.display = visible ? 'inline' : 'none';
-    element.previousSibling.firstChild.src = visible ? config.ImgExpanded : config.ImgCollapsed;
-  }
-}
-function TraverseChildren(element, func, depth){
-  for(var i = 0; i < element.childNodes.length; i++){
-    TraverseChildren(element.childNodes[i], func, depth + 1);
-  }
-  func(element, depth);
-}
-function ExpImgClicked(img){
-  var container = img.parentNode.nextSibling;
-  if(!container) return;
-  var disp = "none";
-  var src = config.ImgCollapsed;
-  if(container.style.display == "none"){
-      disp = "inline";
-      src = config.ImgExpanded;
-  }
-  container.style.display = disp;
-  img.src = src;
-}
-// function CollapseLevel(level){
-//   EnsureIsPopulated();
-//   TraverseChildren($id(config.canvas), function(element, depth){
-//     if(element.className == 'collapsible'){
-//       if(depth >= level){
-//         MakeContentVisible(element, false);
-//       }else{
-//         MakeContentVisible(element, true);  
-//       }
-//     }
-//   }, 0);
-// }
-// function TabSizeChanged(){
-//   Process();
-// }
-function SetTab(){
-  config.TAB = MultiplyString(config.tabSize, config.SINGLE_TAB);
-}
-function EnsureIsPopulated(){
-  if(!$id(config.canvas).innerHTML && !!$id("RawJson").value) Process();
-}
-function MultiplyString(num, str){
-  var sb =[];
-  for(var i = 0; i < num; i++){
-    sb.push(str);
-  }
-  return sb.join("");
-}
-// function SelectAllClicked(){
-//  
-//   if(!!document.selection && !!document.selection.empty) {
-//     document.selection.empty();
-//   } else if(window.getSelection) {
-//     var sel = window.getSelection();
-//     if(sel.removeAllRanges) {
-//       window.getSelection().removeAllRanges();
-//     }
-//   }
-//  
-//   var range = 
-//       (!!document.body && !!document.body.createTextRange)
-//           ? document.body.createTextRange()
-//           : document.createRange();
-//   
-//   if(!!range.selectNode)
-//     range.selectNode($id(config.canvas));
-//   else if(range.moveToElementText)
-//     range.moveToElementText($id(config.canvas));
-//   
-//   if(!!range.select)
-//     range.select($id(config.canvas));
-//   else
-//     window.getSelection().addRange(range);
-// }
-// function LinkToJson(){
-//   var val = $id("RawJson").value;
-//   val = escape(val.split('/n').join(' ').split('/r').join(' '));
-//   $id("InvisibleLinkUrl").value = val;
-//   $id("InvisibleLink").submit();
-// }
 </script>
 <style> 
 /*
